force-app/main/default/objects/Opportunity/fields/A_Authority__c.field-meta.xml
<CustomField>
    <fullName>A_Authority__c</fullName>
    <inlineHelpText>Who&apos;s the executive sponsor of this effort? 
How are these decisions usually made at your company? 
Who else is involved in the decision making process? 
Are there other people that will weigh in on this decision?</inlineHelpText>
    <label>A-Authority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>