force-app/main/default/objects/Opportunity/fields/Account_Active_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Active_License_Status__c</fullName>
    <formula>Account.Active_License_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Active License Status</label>
    <type>Text</type>
</CustomField>