force-app/main/default/objects/Opportunity/fields/Account_has_a_license__c.field-meta.xml
<CustomField>
    <fullName>Account_has_a_license__c</fullName>
    <formula>TEXT (Account.License__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account has a license</label>
    <type>Text</type>
</CustomField>