force-app/main/default/objects/Opportunity/fields/Account_License_Material_Version__c.field-meta.xml
<CustomField>
    <fullName>Account_License_Material_Version__c</fullName>
    <formula>Account.Licensed_Materials_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account License Material Version</label>
    <type>Text</type>
</CustomField>