force-app/main/default/objects/Opportunity/fields/Account_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_License_Type__c</fullName>
    <formula>Account.License_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account License Type</label>
    <type>Text</type>
</CustomField>