force-app/main/default/objects/Opportunity/fields/Account_Market_Reach__c.field-meta.xml
<CustomField>
    <fullName>Account_Market_Reach__c</fullName>
    <description>Enterprise Engagement type Opps have this field set to the related Account&apos;s Market Reach value by flows on Opp (Opportunity - Enterprise Engagement Set Account Market Reach) and Account (Account - Set Enterprise Engagement Opportunity Account Market Reach). This field grants Opportunity read access to Global Team via criteria based sharing rule (Multi-Market Opportunity Visibility). Criteria sharing rules cannot reference formula fields.</description>
    <label>Account Market Reach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>