force-app/main/default/objects/Opportunity/fields/Active_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Active_License_Fee__c</fullName>
    <label>Active License Fee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>