force-app/main/default/objects/Opportunity/fields/Add_Freight_Line__c.field-meta.xml
<CustomField>
    <fullName>Add_Freight_Line__c</fullName>
    <inlineHelpText>This indicates if the freight is free.  Manual =Free  Automatic = It will be billed to the customer</inlineHelpText>
    <label>Add Freight Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>