force-app/main/default/objects/Opportunity/fields/Agent_count__c.field-meta.xml
<CustomField>
    <fullName>Agent_count__c</fullName>
    <label>Agent count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>