force-app/main/default/objects/Opportunity/fields/All_DSPs_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>All_DSPs_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked by the &quot;Deal Support Process - Update Status&quot; flow when an Enterprise Engagement Opportunity&apos;s related DSPs are considered complete (see flow). This field is leveraged by a validation rule that prevents users from marking the Opportunity as &quot;Done - Successful&quot; prematurely.</description>
    <label>All DSPs Confirmed</label>
    <type>Checkbox</type>
</CustomField>