force-app/main/default/objects/Opportunity/fields/Amount_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Awarded__c</fullName>
    <label>Amount Awarded</label>
    <length>50</length>
    <type>Text</type>
</CustomField>