force-app/main/default/objects/Opportunity/fields/Amount_you_are_requesting__c.field-meta.xml
<CustomField>
    <fullName>Amount_you_are_requesting__c</fullName>
    <inlineHelpText>What amount would enable you to attend</inlineHelpText>
    <label>Amount you are requesting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>