force-app/main/default/objects/Opportunity/fields/Any_applicable_license_holders_discount__c.field-meta.xml
<CustomField>
    <fullName>Any_applicable_license_holders_discount__c</fullName>
    <label>Any applicable license holders discount</label>
    <type>TextArea</type>
</CustomField>