force-app/main/default/objects/Opportunity/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent for Approval</label>
    <type>Checkbox</type>
</CustomField>