force-app/main/default/objects/Opportunity/fields/Associated_Training_Contact__c.field-meta.xml
<CustomField>
    <fullName>Associated_Training_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Training Contact</label>
    <referenceTo>Associated_Training_Contacts__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>