force-app/main/default/objects/Opportunity/fields/Attendance_dependent_on_assistance__c.field-meta.xml
<CustomField>
    <fullName>Attendance_dependent_on_assistance__c</fullName>
    <inlineHelpText>MY ATTENDANCE AT THE SELECTED CHANGE MANAGEMENT TRAINING PROGRAM IS DEPENDENT UPON RECEIVING ASSISTANCE.</inlineHelpText>
    <label>Attendance dependent on assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>