force-app/main/default/objects/Opportunity/fields/BC_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>BC_Currency_Code__c</fullName>
    <label>BC Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>