force-app/main/default/objects/Opportunity/fields/BC_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>BC_Sync_Status__c</fullName>
    <label>BC Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>