force-app/main/default/objects/Opportunity/fields/BEO_due_date__c.field-meta.xml
<CustomField>
    <fullName>BEO_due_date__c</fullName>
    <label>BEO due date</label>
    <type>Date</type>
</CustomField>