force-app/main/default/objects/Opportunity/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill To:)</relationshipLabel>
    <relationshipName>Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>