force-app/main/default/objects/Opportunity/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact:</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Bill To Contact:)</relationshipLabel>
    <relationshipName>Bill_To_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>