force-app/main/default/objects/Opportunity/fields/Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Country__c</fullName>
    <label>Bill To Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>