force-app/main/default/objects/Opportunity/fields/Bill_To_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Customer_No__c</fullName>
    <formula>Bill_To__r.Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Customer No.</label>
    <type>Text</type>
</CustomField>