force-app/main/default/objects/Opportunity/fields/Bill_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Email_Address__c</fullName>
    <formula>Bill_To_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Email Address</label>
    <type>Text</type>
</CustomField>