force-app/main/default/objects/Opportunity/fields/Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_State__c</fullName>
    <label>Bill to State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>