force-app/main/default/objects/Opportunity/fields/Bill_To_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Street_2__c</fullName>
    <label>Bill To Street 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>