force-app/main/default/objects/Opportunity/fields/Bill_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Street__c</fullName>
    <inlineHelpText>This information populates from the billing address on the contact record (right side, lower address block) or straight from the information they put in the order form.</inlineHelpText>
    <label>Bill To Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>