force-app/main/default/objects/Opportunity/fields/Bill_to_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Zip__c</fullName>
    <label>Bill to Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>