force-app/main/default/objects/Opportunity/fields/Billing_for_expenses__c.field-meta.xml
<CustomField>
    <fullName>Billing_for_expenses__c</fullName>
    <inlineHelpText>Outline if it&apos;s actuals or flat rate</inlineHelpText>
    <label>Billing for expenses</label>
    <type>TextArea</type>
</CustomField>