force-app/main/default/objects/Opportunity/fields/Budget_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Budget_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the person responsible for the budget decision-making at the company.</description>
    <label>Budget Decision-Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Budget Decision-Maker)</relationshipLabel>
    <relationshipName>Opportunitiesf445</relationshipName>
    <type>Lookup</type>
</CustomField>