force-app/main/default/objects/Opportunity/fields/Calculated_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Create_Date__c</fullName>
    <label>Calculated Create Date</label>
    <type>Date</type>
</CustomField>