force-app/main/default/objects/Opportunity/fields/Change_advisor__c.field-meta.xml
<CustomField>
    <fullName>Change_advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Coach 2)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>