force-app/main/default/objects/Opportunity/fields/Change_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Change_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Analyst</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Change Analyst)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>