force-app/main/default/objects/Opportunity/fields/Closed_Reason_Blank__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Blank__c</fullName>
    <description>Used by component visibility setting on the lightning page layout to show a warning when value is blank and the Opp is Closed - Won. Needed since we cannot check if picklist field is blank directly.</description>
    <formula>ISBLANK(TEXT(Closed_Reason__c))</formula>
    <label>Closed Reason Blank</label>
    <type>Checkbox</type>
</CustomField>