force-app/main/default/objects/Opportunity/fields/Coach_1__c.field-meta.xml
<CustomField>
    <fullName>Coach_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coach 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Coach 1)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>