force-app/main/default/objects/Opportunity/fields/Comments_from_Website_Lead__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Website_Lead__c</fullName>
    <description>These are the comments from the website that came with the Lead.</description>
    <label>Comments from Website - Lead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>