force-app/main/default/objects/Opportunity/fields/Commercial_Inv_Letterhead__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Inv_Letterhead__c</fullName>
    <label>Commercial Inv. Letterhead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>