force-app/main/default/objects/Opportunity/fields/Commercial_Inv_Signature__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Inv_Signature__c</fullName>
    <label>Commercial Inv. Signature</label>
    <length>50</length>
    <type>Text</type>
</CustomField>