force-app/main/default/objects/Opportunity/fields/Consulting_Resources_Needed__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Resources_Needed__c</fullName>
    <label>Consulting Resources Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr. Change Advisor</fullName>
            </value>
            <value>
                <fullName>Change Advisor</fullName>
            </value>
            <value>
                <fullName>Engagement Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>