force-app/main/default/objects/Opportunity/fields/Contact_placing_order__c.field-meta.xml
<CustomField>
    <fullName>Contact_placing_order__c</fullName>
    <label>Contact placing order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>