force-app/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent BH contract</fullName>
            </value>
            <value>
                <fullName>Signed/Accepted</fullName>
            </value>
            <value>
                <fullName>Waiting for client PO/Contract</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>