force-app/main/default/objects/Opportunity/fields/Country_Code_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_From_Lead__c</fullName>
    <label>Country Code - From Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code_2_Digit_ISO</valueSetName>
    </valueSet>
</CustomField>