force-app/main/default/objects/Opportunity/fields/Customs_Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>Customs_Broker_Type__c</fullName>
    <label>Customs Broker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>