force-app/main/default/objects/Opportunity/fields/Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Date_Status__c</fullName>
    <label>Date Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dates Offered</fullName>
            </value>
            <value>
                <fullName>Dates Confirmed</fullName>
            </value>
            <value>
                <fullName>No Dates</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>