force-app/main/default/objects/Opportunity/fields/Day_2__c.field-meta.xml
<CustomField>
    <fullName>Day_2__c</fullName>
    <label>Day 2</label>
    <type>Date</type>
</CustomField>