force-app/main/default/objects/Opportunity/fields/Day_3__c.field-meta.xml
<CustomField>
    <fullName>Day_3__c</fullName>
    <label>Day 3</label>
    <type>Date</type>
</CustomField>