force-app/main/default/objects/Opportunity/fields/Deposit_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Status__c</fullName>
    <label>Deposit Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Deposit Invoice Paid</fullName>
            </value>
            <value>
                <fullName>No Deposit Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>