force-app/main/default/objects/Opportunity/fields/Deposit_structure__c.field-meta.xml
<CustomField>
    <fullName>Deposit_structure__c</fullName>
    <label>Deposit structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>