force-app/main/default/objects/Opportunity/fields/Dietary_needs_due_date__c.field-meta.xml
<CustomField>
    <fullName>Dietary_needs_due_date__c</fullName>
    <label>Dietary needs due date</label>
    <type>Date</type>
</CustomField>