force-app/main/default/objects/Opportunity/fields/Disable_Conga_Logic__c.field-meta.xml
<CustomField>
    <fullName>Disable_Conga_Logic__c</fullName>
    <formula>IF(OR(ISBLANK(Fee__c),ISBLANK(Location__c),ISBLANK(Account.PSA_Effective_Date__c),ISBLANK(Day_1__c), text(Count_of_Products__c)=&quot;0&quot;),&quot;1&quot;,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disable Conga Logic</label>
    <type>Text</type>
</CustomField>