force-app/main/default/objects/Opportunity/fields/Does_it_need_to_be_signed_at_Prosci__c.field-meta.xml
<CustomField>
    <fullName>Does_it_need_to_be_signed_at_Prosci__c</fullName>
    <label>Does it need to be signed at Prosci</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>