force-app/main/default/objects/Opportunity/fields/Dropship__c.field-meta.xml
<CustomField>
    <fullName>Dropship__c</fullName>
    <label>Dropship from:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>