force-app/main/default/objects/Opportunity/fields/Dropship_Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dropship Bill to:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Dropship Bill to:)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>