force-app/main/default/objects/Opportunity/fields/Dropship_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Category_Code__c</fullName>
    <label>Dropship Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BC_Category_Code</valueSetName>
    </valueSet>
</CustomField>