force-app/main/default/objects/Opportunity/fields/Dropship_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Invoice_Date__c</fullName>
    <label>Dropship Invoice Date</label>
    <type>Date</type>
</CustomField>