force-app/main/default/objects/Opportunity/fields/Dropship_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Invoice_No__c</fullName>
    <label>Dropship Invoice No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>