force-app/main/default/objects/Opportunity/fields/Dropship_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Location_Code__c</fullName>
    <label>Dropship Location Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DROPSHIP</fullName>
            </value>
            <value>
                <fullName>FULFILL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>