force-app/main/default/objects/Opportunity/fields/Dropship_PO_No__c.field-meta.xml
<CustomField>
    <fullName>Dropship_PO_No__c</fullName>
    <label>Dropship PO No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>