force-app/main/default/objects/Opportunity/fields/Dropship_Sales_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Dropship_Sales_Order_No__c</fullName>
    <label>Dropship Sales Order No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>