force-app/main/default/objects/Opportunity/fields/Duty_Payment_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Duty_Payment_Account_No__c</fullName>
    <label>Duty Payment Account No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>