force-app/main/default/objects/Opportunity/fields/Duty_Payment_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Duty_Payment_Country_Code__c</fullName>
    <label>Duty Payment Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code_2_Digit_ISO</valueSetName>
    </valueSet>
</CustomField>