force-app/main/default/objects/Opportunity/fields/Duty_Payment_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Duty_Payment_Post_Code__c</fullName>
    <label>Duty Payment Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>