force-app/main/default/objects/Opportunity/fields/Duty_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Duty_Payment_Type__c</fullName>
    <label>Duty Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sender</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>