force-app/main/default/objects/Opportunity/fields/EEI_ITN__c.field-meta.xml
<CustomField>
    <fullName>EEI_ITN__c</fullName>
    <label>EEI/ITN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>