force-app/main/default/objects/Opportunity/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <formula>Participant_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email address</label>
    <type>Text</type>
</CustomField>