force-app/main/default/objects/Opportunity/fields/Expected_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Project_Start_Date__c</fullName>
    <description>Used for PSA Revenue Forecasting</description>
    <inlineHelpText>Expected Project Start Date for Revenue Forecasting</inlineHelpText>
    <label>Expected Project Start Date</label>
    <type>Date</type>
</CustomField>