force-app/main/default/objects/Opportunity/fields/Facilitator_1__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Facilitator 1)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>